[gd_scene load_steps=23 format=3 uid="uid://pkpsts2b8g0g"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_fhigu"]
[ext_resource type="Texture2D" uid="uid://c0saa8cchyf1q" path="res://addons/Tech Dungeon Roguelite - Asset/Players/No Outlines/players blue x3.png" id="2_eav0h"]
[ext_resource type="Texture2D" uid="uid://bnp5cfgyrdrfl" path="res://addons/Tech Dungeon Roguelite - Asset/UI/ui x3.png" id="3_xqc2g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ubm4b"]
radius = 20.0
height = 62.5

[sub_resource type="Animation" id="Animation_14od2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_2umy4"]
resource_name = "death"
length = 0.65
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [96, 97, 98, 99, 100, 101, 102]
}

[sub_resource type="Animation" id="Animation_gbh4e"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [56]
}

[sub_resource type="Animation" id="Animation_7eiam"]
resource_name = "reload"
length = 0.9
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76]
}

[sub_resource type="Animation" id="Animation_4mhbb"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [88, 89, 90, 91]
}

[sub_resource type="Animation" id="Animation_t4vaj"]
resource_name = "walk"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [80, 81, 82, 83]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_etokk"]
_data = {
"RESET": SubResource("Animation_14od2"),
"death": SubResource("Animation_2umy4"),
"idle": SubResource("Animation_gbh4e"),
"reload": SubResource("Animation_7eiam"),
"shoot": SubResource("Animation_4mhbb"),
"walk": SubResource("Animation_t4vaj")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ch04f"]
atlas = ExtResource("3_xqc2g")
region = Rect2(96, 0, 96, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5pnc"]
atlas = ExtResource("3_xqc2g")
region = Rect2(192, 0, 96, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_u020o"]
atlas = ExtResource("3_xqc2g")
region = Rect2(288, 0, 96, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec4xm"]
atlas = ExtResource("3_xqc2g")
region = Rect2(384, 0, 96, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvo3i"]
atlas = ExtResource("3_xqc2g")
region = Rect2(480, 0, 96, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdixc"]
atlas = ExtResource("3_xqc2g")
region = Rect2(576, 0, 96, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a3xt"]
atlas = ExtResource("3_xqc2g")
region = Rect2(672, 0, 96, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7uxf"]
atlas = ExtResource("3_xqc2g")
region = Rect2(768, 0, 96, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2m4i"]
atlas = ExtResource("3_xqc2g")
region = Rect2(864, 0, 96, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcopf"]
atlas = ExtResource("3_xqc2g")
region = Rect2(960, 0, 96, 81)

[sub_resource type="SpriteFrames" id="SpriteFrames_kms6o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch04f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5pnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u020o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec4xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvo3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdixc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a3xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7uxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2m4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcopf")
}],
"loop": true,
"name": &"life",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_fhigu")
is_player_special = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_eav0h")
hframes = 8
vframes = 13
frame = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 18)
scale = Vector2(1, 0.64)
shape = SubResource("CapsuleShape2D_ubm4b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_etokk")
}
autoplay = "idle"

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(23, 7)

[node name="TimerAttack" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HealthBar" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -33)
scale = Vector2(0.84, 0.6)
sprite_frames = SubResource("SpriteFrames_kms6o")
animation = &"life"

[node name="TimerReturn" type="Timer" parent="."]
wait_time = 26.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerReturn" to="." method="_on_timer_return_timeout"]
